add build tasks

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,7 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-20.04'
-  demands: Limit -equals DisAbleParallel 
-  - npm
+  demands: ['Limit -equals DisAbleParallel', '-npm']
 
 variables:
   buildConfiguration: 'Release'
